update final markup

--- a/index.html
+++ b/index.html
@@ -6,5 +6,48 @@
     <link rel="stylesheet" href="style.css" />
     <title>Layout-12</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <!-- title -->
+      <h1>Je vous</h1>
+      <!-- small blog post -->
+      <div class="small_blog_post">
+        <p>17 — 12 — 2021</p>
+        <div class="image">
+          <img src="./assets/images/Image.png" alt="" />
+        </div>
+        <div class="text">
+          <div class="title">
+            <h2>Cyclyng is huge in Copenhagen</h2>
+            <p>
+              55% of Copenhageners commute to work by bicycle. Isn’t that
+              amazing?
+            </p>
+          </div>
+          <a href="/">/ read more</a>
+        </div>
+      </div>
+      <!-- large blog post -->
+      <div class="large_blog_post">
+        <p>12 — 12 — 2021</p>
+        <div class="image">
+          <img src="./assets/images/Image-lg.png" alt="" />
+        </div>
+        <div class="text">
+          <div class="title">
+            <h2>Longest pedestrian shopping street in the world</h2>
+            <p>
+              55% of Copenhageners commute to work by bicycle. Isn’t that
+              amazing?
+            </p>
+          </div>
+          <a href="/">/ read more</a>
+        </div>
+      </div>
+      <!-- circle text -->
+      <div class="circle_text">
+        <img src="./assets/images/Circle Text.png" alt="circle text" />
+      </div>
+    </main>
+  </body>
 </html>
