--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <!-- title -->
       <h1>Je vous</h1>
       <!-- small blog post -->
-      <div class="small_blog_post">
-        <p>17 — 12 — 2021</p>
+      <div class="small_blog_post blog_post">
+        <p class="date">17 — 12 — 2021</p>
         <div class="image">
           <img src="./assets/images/Image.png" alt="" />
         </div>
@@ -24,12 +24,12 @@
               amazing?
             </p>
           </div>
-          <a href="/">/ read more</a>
         </div>
+        <a href="/">/ read more</a>
       </div>
       <!-- large blog post -->
-      <div class="large_blog_post">
-        <p>12 — 12 — 2021</p>
+      <div class="large_blog_post blog_post">
+        <p class="date">12 — 12 — 2021</p>
         <div class="image">
           <img src="./assets/images/Image-lg.png" alt="" />
         </div>
@@ -41,8 +41,8 @@
               amazing?
             </p>
           </div>
-          <a href="/">/ read more</a>
         </div>
+        <a href="/">/ read more</a>
       </div>
       <!-- circle text -->
       <div class="circle_text">
